--- a/style.css
+++ b/style.css
@@ -7,12 +7,17 @@
     font-family: 'Montserrat', sans-serif;
 }
 
+body, html {
+    height: 100%;
+    margin: 0;
+}
+
 body {
     background-image: url("Background.jpg");
     background-size: cover;
     background-position: center;
+    background-repeat: no-repeat;
 }
-
 #logo-div {
 	text-align: center; 
 }
